src/objects/Foo__c.object
<CustomObject>
    <description>Used only for unit testing</description>
    <fields>
        <fullName>A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <defaultValue>0</defaultValue>
        <label>B</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BarSumA__c</fullName>
        <label>BarSumA</label>
        <summarizedField>Bar__c.A__c</summarizedField>
        <summaryForeignKey>Bar__c.Foo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>0</defaultValue>
        <label>C</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <defaultValue>0</defaultValue>
        <label>D</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuxA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuxA</label>
        <referenceTo>Qux__c</referenceTo>
        <relationshipLabel>Foos</relationshipLabel>
        <relationshipName>Foos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuxB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuxB</label>
        <referenceTo>Qux__c</referenceTo>
        <relationshipLabel>Foos (QuxB)</relationshipLabel>
        <relationshipName>Foos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X__c</fullName>
        <defaultValue>0</defaultValue>
        <label>X</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Y</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Z__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>Foo</label>
    <nameField>
        <displayFormat>FOO-{0}</displayFormat>
        <label>Foo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>